--- a/Coordinated App.xctemplate/TemplateInfo.plist
+++ b/Coordinated App.xctemplate/TemplateInfo.plist
@@ -30,14 +30,14 @@
 				<dict>
 					<key>Nodes</key>
 					<array>
-						<string>ViewController.h:comments</string>
-						<string>ViewController.h:imports:importCocoa</string>
-						<string>ViewController.h:interface(___FILEBASENAME___ : UIViewController)</string>
-						<string>ViewController.m:comments</string>
-						<string>ViewController.m:imports:importHeader:ViewController.h</string>
-						<string>ViewController.m:extension</string>
-						<string>ViewController.m:implementation:methods:viewDidLoad(- (void\)viewDidLoad)</string>
-						<string>ViewController.m:implementation:methods:viewDidLoad:super</string>
+						<string>___PACKAGENAME___MainViewController.h:comments</string>
+						<string>___PACKAGENAME___MainViewController.h:imports:importCocoa</string>
+						<string>___PACKAGENAME___MainViewController.h:interface(___FILEBASENAME___ : UIViewController)</string>
+						<string>___PACKAGENAME___MainViewController.m:comments</string>
+						<string>___PACKAGENAME___MainViewController.m:imports:importHeader:ViewController.h</string>
+						<string>___PACKAGENAME___MainViewController.m:extension</string>
+						<string>___PACKAGENAME___MainViewController.m:implementation:methods:viewDidLoad(- (void\)viewDidLoad)</string>
+						<string>___PACKAGENAME___MainViewController.m:implementation:methods:viewDidLoad:super</string>
 						<string>Info.plist:UIApplicationSceneManifest:UISceneStoryboardFile</string>
 						<string>Base.lproj/Main.storyboard</string>
 					</array>
@@ -72,11 +72,11 @@
 						</dict>
 						<key>Nodes</key>
 						<array>
-							<string>ViewController.swift:comments</string>
-							<string>ViewController.swift:imports:importCocoa</string>
-							<string>ViewController.swift:implementation(___FILEBASENAME___: UIViewController)</string>
-							<string>ViewController.swift:implementation:methods:viewDidLoad(override func viewDidLoad(\))</string>
-							<string>ViewController.swift:implementation:methods:viewDidLoad:super</string>
+							<string>___PACKAGENAME___MainViewController.swift:comments</string>
+							<string>___PACKAGENAME___MainViewController.swift:imports:importCocoa</string>
+							<string>___PACKAGENAME___MainViewController.swift:implementation(___FILEBASENAME___: UIViewController)</string>
+							<string>___PACKAGENAME___MainViewController.swift:implementation:methods:viewDidLoad(override func viewDidLoad(\))</string>
+							<string>___PACKAGENAME___MainViewController.swift:implementation:methods:viewDidLoad:super</string>
 							<string>Info.plist:UIApplicationSceneManifest:UISceneStoryboardFile</string>
 							<string>Base.lproj/Main.storyboard</string>
 						</array>
