MainCoordinator working fine

--- a/Coordinated App.xctemplate/TemplateInfo.plist
+++ b/Coordinated App.xctemplate/TemplateInfo.plist
@@ -71,19 +71,21 @@
 							<string>___PACKAGENAME___MainViewController.swift:implementation:methods:viewDidLoad(override func viewDidLoad(\))</string>
 							<string>___PACKAGENAME___MainViewController.swift:implementation:methods:viewDidLoad:super</string>
 							<string>Helpers/Coordinator.swift</string>
+							<string>___PACKAGENAME___MainCoordinator.swift</string>
 						</array>
 						<key>Definitions</key>
 						<dict>
+							<key>___PACKAGENAME___MainCoordinator.swift</key>
+							<dict>
+								<key>Path</key>
+								<string>___PACKAGENAME___MainCoordinator.swift</string>
+							</dict>
 							<key>Helpers/Coordinator.swift</key>
 							<dict>
 								<key>Path</key>
 								<string>Helpers/Coordinator.swift</string>
-								<key>SortOrder</key>
-								<integer>98</integer>
 							</dict>
 						</dict>
-						<key>Targets</key>
-						<array/>
 					</dict>
 					<dict>
 						<key>RequiredOptions</key>
