--- a/Coordinated UIScene Lifecycle.xctemplate/TemplateInfo.plist
+++ b/Coordinated UIScene Lifecycle.xctemplate/TemplateInfo.plist
@@ -252,15 +252,14 @@
 							<key>SceneDelegate.swift:implementation:methods:sceneWillConnectToSession:body</key>
 							<string>
 guard let scene = (scene as? UIWindowScene) else { return }
-guard let coordinator = coordinator else { return }
 
 let navigationController = UINavigationController()
 coordinator = ___PACKAGENAME___MainCoordinator(navigationController: navigationController)
-coordinator.start()
+coordinator?.start()
 
-guard let window = UIWindow(windowScene: scene)
-window.rootViewController = navigationController
-window.makeKeyAndVisible()
+window = UIWindow(windowScene: scene)
+window?.rootViewController = navigationController
+window?.makeKeyAndVisible()
 							</string>
 						</dict>
 					</dict>
